# shell-whiz

./: .flake8  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: black.yml  lint.yml  release.yml
shell_whiz/: __init__.py  __main__.py  argparse.py  ask_cli.py  cli.py  cli_tools.py  config.py  config_cli.py  constants.py  exceptions.py  jsonschemas.py  llm_client.py  llm_jsonschemas.py  main.py  openai.py  openai_client.py
shell_whiz/ai/: __init__.py  client.py  errors.py
shell_whiz/ai/prompts/: edit_shell_command.yml  explain_shell_command.yml  recognise_dangerous_command.yml  suggest_shell_command.yml
shell_whiz/ai/providers/: api.py  openai.py
shell_whiz/cli/: __init__.py
shell_whiz/cli/commands/: ask.py  config.py  explain.py
shell_whiz/cli/core/: shell_command.py
shell_whiz/llm/: __init__.py  client.py  errors.py
shell_whiz/llm/prompts/: edit_shell_command.yml  explain_shell_command.yml  suggest_shell_command.yml
shell_whiz/llm/providers/: api.py  openai.py
