[tool.black]
line-length = 80

[tool.isort]
profile = "black"

[tool.poetry]
name = "shell-whiz"
version = "2.1.3"
description = "AI assistant for command line"
license = "GPL-3.0-only"
authors = ["Tamerlan Beyimjan <beyimjan@gmail.com>"]
readme = "README.md"
repository = "https://github.com/beyimjan/shell-whiz"
packages = [{include = "shell_whiz"}]

[tool.poetry.dependencies]
python = ">=3.9 <4"
openai = "^1.2.4"
jsonschema = "^4.19.0"
rich = "^13.5.2"
questionary = "^2.0.0"

[tool.poetry.scripts]
sw = "shell_whiz.cli:run"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^23.3.0"
isort = {version = "^5.11.5", extras = ["colors"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
