[tool.black]
line-length = 80

[tool.isort]
profile = "black"

[tool.poetry]
name = "shell-whiz"
version = "2.1.4"
description = "AI assistant for command line"
license = "GPL-3.0-only"
authors = ["Tamerlan Beyimjan <beyimjan@gmail.com>"]
readme = "README.md"
repository = "https://github.com/beyimjan/shell-whiz"
packages = [{include = "shell_whiz"}]

[tool.poetry.dependencies]
python = ">=3.9 <4"
pydantic = "^2.6.3"

[tool.poetry.scripts]
sw = "shell_whiz.cli:run"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^23.3.0"
isort = {version = "^5.11.5", extras = ["colors"]}
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
